cloudnative-pg/cloudnative-pg_v1_Service_cnpg-webhook-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: cloudnative-pg
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: cloudnative-pg
    app.kubernetes.io/version: 1.23.2
    helm.sh/chart: cloudnative-pg-0.21.5
  name: cnpg-webhook-service
  namespace: cloudnative-pg
spec:
  ports:
  - name: webhook-server
    port: 443
    targetPort: webhook-server
  selector:
    app.kubernetes.io/instance: cloudnative-pg
    app.kubernetes.io/name: cloudnative-pg
  type: ClusterIP
